--- a/client/index.html
+++ b/client/index.html
@@ -1,9 +1,8 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Punch App</title>
+    <title>Punch Clock</title>
   </head>
   <body>
     <div id="root"></div>
